improve: fix heroes, blog listing, projects header
- Consolidate about hero to match index style (centered, vertical)
- Remove "Active Agent" badge and stats row from about hero
- Fix projects hero white-on-white text by using standard hero pattern
- Constrain blog listing to max-w-4xl for better readability
- Fix blog/projects hero markup to use standard hero div>h1+excerpt

--- a/blog.pug
+++ b/blog.pug
@@ -7,21 +7,23 @@ hero: true
 ---
 
 .hero
-  h1 {{ page.title }}
-  p.lead {{ page.description }}
+  div
+    h1 {{ page.title }}
+    p.excerpt {{ page.description }}
 
 main.container.mx-auto.px-4.py-8
   | {% if site.posts.size > 0 %}
-  | {% for post in site.posts %}
-  | {% include card.pug
-  |   type="post"
-  |   url=post.url
-  |   title=post.title
-  |   date=post.date
-  |   excerpt=post.excerpt
-  |   tags=post.tags
-  | %}
-  | {% endfor %}
+  .max-w-4xl.mx-auto
+    | {% for post in site.posts %}
+    | {% include card.pug
+    |   type="post"
+    |   url=post.url
+    |   title=post.title
+    |   date=post.date
+    |   excerpt=post.excerpt
+    |   tags=post.tags
+    | %}
+    | {% endfor %}
   | {% else %}
   p.no-posts No posts yet.
   | {% endif %}
