--- a/projects.pug
+++ b/projects.pug
@@ -6,10 +6,10 @@ permalink: /projects/
 hero: true
 ---
 
-.hero.text-white.py-16.mb-8
-  .container.mx-auto.px-4.text-center
-    h1.text-4xl.font-bold.mb-4 {{ page.title }}
-    p.text-xl.opacity-90.max-w-2xl.mx-auto {{ page.description }}
+.hero
+  div
+    h1 {{ page.title }}
+    p.excerpt {{ page.description }}
 
 main.container.mx-auto.px-4.py-8
   | {% if site.projects.size > 0 %}
