--- a/blog.pug
+++ b/blog.pug
@@ -33,7 +33,7 @@ main.container.mx-auto.px-4.py-8
       | {% if latest.tags %}
       .flex.flex-wrap.gap-2.mb-4
         | {% for tag in latest.tags %}
-        span.text-xs(class="text-text/50") \#{{ tag }}
+        a.text-xs.no-underline(href="/tags/#{{ tag }}" class="text-text/50 hover:text-primary transition-colors") \#{{ tag }}
         | {% endfor %}
       | {% endif %}
       a.inline-flex.items-center.text-sm.font-medium.no-underline(href="{{ latest.url }}" class="text-primary hover:text-primary/80")
@@ -51,7 +51,7 @@ main.container.mx-auto.px-4.py-8
         | {% if post.tags %}
         .flex.flex-wrap.gap-1
           | {% for tag in post.tags limit:4 %}
-          span.text-xs(class="text-text/40") \#{{ tag }}
+          a.text-xs.no-underline(href="/tags/#{{ tag }}" class="text-text/40 hover:text-primary transition-colors") \#{{ tag }}
           | {% endfor %}
         | {% endif %}
     | {% endfor %}
