--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -110,6 +110,10 @@
         @apply inline-block;
       }
     }
+
+    .meta-tags {
+      @apply flex flex-wrap justify-center gap-2 mt-3;
+    }
   }
 
   .prose {
