--- a/_includes/metadata.pug
+++ b/_includes/metadata.pug
@@ -9,16 +9,15 @@
     i.far.fa-user
     | {{ include.author }}
   | {% endif %}
-  | {% if include.tags %}
-  .tags
-    i.fas.fa-tags
-    | {% for tag in include.tags %}
-    span.tag {{ tag }}
-    | {% unless forloop.last %} · {% endunless %}
-    | {% endfor %}
-  | {% endif %}
   | {% if include.reading_time %}
   .reading-time
     i.far.fa-clock
     | {{ include.reading_time }}
   | {% endif %}
+| {% if include.tags %}
+.meta-tags
+  | {% for tag in include.tags %}
+  a.no-underline(href="/tags/\#{{ tag }}" class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-primary/10 text-primary/80 hover:bg-primary/20 hover:text-primary transition-colors")
+    | \#{{ tag }}
+  | {% endfor %}
+| {% endif %}
