--- a/_layouts/post.pug
+++ b/_layouts/post.pug
@@ -32,20 +32,29 @@ article.post
 
         hr(class="my-8 border-border")
 
+        .text-center.mt-8
+          a(href="/blog" class="inline-flex items-center gap-2 text-sm font-medium text-text/60 hover:text-primary no-underline transition-colors")
+            i.fas.fa-arrow-left(class="text-[10px]")
+            | All posts
+
         | {% if page.previous or page.next %}
-        nav.post-nav
+        nav(class="post-nav grid gap-4 mt-6" style="grid-template-columns: 1fr 1fr;")
           | {% if page.previous %}
-          a.prev(href="{{ page.previous.url }}")
-            div.label
-              i.fas.fa-arrow-left.mr-2
-              | Previous Post
-              div.title {{ page.previous.title }}
+          a(href="{{ page.previous.url }}" class="group flex flex-col gap-1 p-4 rounded-lg border border-border/50 no-underline hover:border-primary/50 hover:bg-surface/50 transition-all")
+            span(class="text-xs font-medium text-text/50 flex items-center gap-1")
+              i.fas.fa-arrow-left(class="text-[10px]")
+              | Previous
+            span(class="text-sm font-medium text-text group-hover:text-primary transition-colors line-clamp-2") {{ page.previous.title }}
+          | {% else %}
+          div
           | {% endif %}
           | {% if page.next %}
-          a.next(href="{{ page.next.url }}")
-            span.label
-              | Next Post
-              i.fas.fa-arrow-right
-            span.title {{ page.next.title }}
+          a(href="{{ page.next.url }}" class="group flex flex-col gap-1 p-4 rounded-lg border border-border/50 no-underline hover:border-primary/50 hover:bg-surface/50 transition-all text-right")
+            span(class="text-xs font-medium text-text/50 flex items-center gap-1 justify-end")
+              | Next
+              i.fas.fa-arrow-right(class="text-[10px]")
+            span(class="text-sm font-medium text-text group-hover:text-primary transition-colors line-clamp-2") {{ page.next.title }}
+          | {% else %}
+          div
           | {% endif %}
         | {% endif %}
