--- a/blog.pug
+++ b/blog.pug
@@ -10,6 +10,9 @@ hero: true
   div
     h1 {{ page.title }}
     p.excerpt {{ page.description }}
+    a.inline-flex.items-center.gap-1.no-underline.mt-3(href="/tags/" class="text-sm text-text/50 hover:text-primary transition-colors")
+      i.fas.fa-tags(class="text-[11px]")
+      | Browse by tag
 
 main.container.mx-auto.px-4.py-8
   | {% if site.posts.size > 0 %}
