fix(tags): use case-insensitive sort for tag sections

--- a/tags.pug
+++ b/tags.pug
@@ -30,7 +30,7 @@ main.container.mx-auto.px-4.py-8
     |     {% endunless %}
     |   {% endfor %}
     | {% endfor %}
-    | {% assign sorted_tags = all_tags | sort %}
+    | {% assign sorted_tags = all_tags | sort_natural %}
     | {% comment %}Build count-prefixed array for sorting by count{% endcomment %}
     | {% assign counted_tags = "" | split: "" %}
     | {% for tag in sorted_tags %}
