--- a/_includes/metadata.pug
+++ b/_includes/metadata.pug
@@ -1,3 +1,7 @@
+//- Metadata line (date, author, reading time) is kept compact on one row.
+//- Tags are rendered separately below as clickable pills linking to /tags/#name,
+//- to avoid crowding the metadata line. The \# escape is required because Pug
+//- interprets #{ } as string interpolation.
 .meta
   | {% if include.date %}
   .date
